[package]
name = "jk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
git2 = "0.20.0"
gpgme = "0.11.0"
inquire = { version = "0.7.5", features = ["editor"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["json"] }
self_update = "0.42.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
