[package]
name = "jk"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
dirs = "6.0.0"
git2 = "0.20.0"
gpgme = "0.11.0"
inquire = { version = "0.9.4", features = ["editor"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.13.3", features = ["json"] }
self_update = "0.44.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
