[package]
name = "jk"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
futures = "0.3"
git2 = "0.20"
gpgme = "0.11"
inquire = { version = "0.9", features = ["editor"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["json"] }
self_update = "0.44"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
